syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

	rpc CreatDiscount (CreateDiscountRequest) returns (CouponModel);

	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);

	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteCounponResponse);

}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountRequest {
	CouponModel couponModel = 1;
}

message UpdateDiscountRequest {
	CouponModel couponModel = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteCounponResponse {
	bool success = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}